--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     
+    <h2>დავალება 1:</h2>
+</br>
     <div class="clock">
-        <span>00</span>
+        <span id="hours">00</span>
         <span>:</span>
-        <span>00</span>
+        <span id="minutes">00</span>
         <span>:</span>
-        <span>00</span>
+        <span id="seconds">00</span>
     </div>
 
     <script src="js/app.js"></script>
