ტესტმა წარმატებით ჩაიარა

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 
     <img name="slide" width="400" height="200">
 
+
+    <h2>დავალება 3:</h2>
+
+    <p id="clock2"></p>
+
     <script src="js/app.js"></script>
 </body>
 </html>
