სლაიდერი აწყობილია მაგრამ არ არის დამთავრებული

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <h2>დავალება 2:</h2>
 
-   
+    <div id="imageContainer">
+        <img id="slideImage" src="img/1.jpg">
+        </div>
 
 
     <h2>დავალება 3:</h2>
